--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "version": "0.0.0",
+  "name": "eco",
+  "license": "GNU General Public License v3",
+  "description": "",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite --host 0.0.0.0",
-    "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "start": "node app.js"
   },
   "dependencies": {
-    "@types/node": "^16.3.0",
-    "express": "^4.17.1",
     "vue": "^3.0.5",
     "vue-router": "^4.0.10",
     "vuex": "^4.0.2"
@@ -25,6 +25,8 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^4.3.2",
     "vite": "^2.4.0",
-    "vue-tsc": "^0.0.24"
+    "vue-tsc": "^0.0.24",
+    "@types/node": "^16.3.0",
+    "express": "^4.17.1"
   }
 }
