--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "eco",
   "license": "GNU General Public License v3",
-  "description": "",
+  "description": "Make your minecraft server with intelligence!",
   "version": "1.0.0",
   "scripts": {
     "dev": "vite --host 0.0.0.0",
     "start": "node app.js"
   },
   "dependencies": {
+    "express": "^4.17.1",
+    "json5": "^2.2.0",
     "vue": "^3.0.5",
     "vue-router": "^4.0.10",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.4",
+    "@types/node": "^16.3.0",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "@vitejs/plugin-vue": "^1.2.4",
@@ -25,8 +28,6 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^4.3.2",
     "vite": "^2.4.0",
-    "vue-tsc": "^0.0.24",
-    "@types/node": "^16.3.0",
-    "express": "^4.17.1"
+    "vue-tsc": "^0.0.24"
   }
 }
