--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.15.0",
     "@tailwindcss/postcss7-compat": "^2.2.7",
     "@types/node": "^16.4.13",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
@@ -22,6 +23,9 @@
     "@vitejs/plugin-vue": "^1.4.0",
     "@vue/compiler-sfc": "^3.1.5",
     "autoprefixer": "^10",
+    "axios": "^0.21.1",
+    "babel-cli": "^6.26.0",
+    "body-parser": "^1.19.0",
     "eslint": "7.32.0",
     "eslint-plugin-vue": "^7.15.1",
     "postcss": "^8",
