--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.7",
     "@types/node": "^16.4.13",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
     "@vitejs/plugin-vue": "^1.4.0",
     "@vue/compiler-sfc": "^3.1.5",
     "autoprefixer": "^10",
@@ -28,8 +26,6 @@
     "eslint-plugin-vue": "^7.15.1",
     "postcss": "^8",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "typescript": "^4.3.5",
-    "vite": "^2.4.4",
-    "vue-tsc": "^0.2.2"
+    "vite": "^2.4.4"
   }
 }
