--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "eco",
   "version": "1.0.0",
-  "description": "",
+  "description": "Make your minecraft server with intelligence!",
   "main": "app.js",
   "author": "ElaBosak233",
   "license": "MIT",
   "scripts": {
-    "start": "node app.js --host=0.0.0.0",
-    "tailwind:css": "postcss public/styles/tailwind.css -o public/styles/style.css"
+    "start": "node app.js --host=0.0.0.0"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -24,6 +23,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ElaBosak233/eco"
+    "url": "https://github.com/ElaBosak233/eco.git"
   }
 }
