--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
   "devDependencies": {
     "prettier": "^2.3.2"
   },
+  "imports": {
+    "#data/*": "./data/*",
+    "#assets/*": "./assets/*",
+    "#config": "./eco.config.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/ElaBosak233/eco.git"
